<resources>
    <!-- App Name -->
    <string name="app_name">Buy And Eat</string>

    <!-- Auth -->
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="signup">Cadastre-se</string>
    <string name="forgot_password">Esqueceu a senha?</string>
    <string name="enviar">Enviar</string>
    <string name="recuperar_conta">Recuperar conta</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="home_title">Menu</string>
    <string name="cart_title">Carrinho</string>
    <string name="total_price">Total: R$ 0.00</string>
    <string name="confirm_order">Confirmar Pedido</string>
    <string name="add_to_cart">Adicionar ao Carrinho</string>
    <string name="view_cart">Ver Carrinho</string>

    <string name="atencao">Atenção</string>
    <string name="ok">Ok</string>
    <string name="message">Mensagem</string>
    <string name="succes_login">Usuário logado com sucesso</string>
    <string name="erro_login">Erro ao logar usuario</string>
    <string name="succes_register">Usuário registrado com sucesso</string>
    <string name="erro_register">Erro ao registrar usuario</string>
    <string name="succes_signout">Usuário deslogado com sucesso</string>
    <string name="succes_forgot">Email de recuperação enviado</string>
    <string name="succes_cart">Produto adicionado ao carrinho</string>




</resources>